# co2zy

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: led.rs  lib.rs  measurement.rs  sensor.rs  ui.rs
