[package]
edition = "2024"
name = "co2zy"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "co2zy"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }

critical-section = "1.2.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
ssd1306 = { version = "0.10.0", features = ["async"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embedded-aht20 = { version = "0.2.0", features = ["async"] }
ens160 = { version = "0.6.1", default-features = false, features = ["async"] }
smart-leds = "0.4.0"
esp-hal-smartled = { version = "0.17.0", features = ["defmt", "esp32c6"] }
palette = { version = "0.7.6", default-features = false, features = [
  "alloc",
  "approx",
  "libm",
] }
embedded-hal-async = "1.0.0"
display-interface-i2c = "0.5.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
